# blender-scripting

./: .coveragerc  .gitignore  .pre-commit-config.yaml  README.md  camera_to_ortho.py  install-act-and-docker-engine.sh  pyproject.toml  requirements.txt
.experiments/03_basic_cube_animation_and_render/: cube_location_animation.blend
.experiments/04_vscode_python/: my_script_1.py
.experiments/06_cube_from_vertices/: cube_from_vertices.blend
.experiments/07_material_detail_with_noise/: 0001-0180.mkv
.experiments/08_stack_spin_animation/: stack_spin_animation.blend
.experiments/10_user_interface/: user_interface.py
.experiments/12_random_mat_ico_sphere/: main.blend
.experiments/13_node_based_material_exploration/: Iterative Material Exploration - BSDF.blend  fresnel node.blend  pythonic_materials.blend
.experiments/15_meshes_from_scratch/: bmesh_from_primitive.py  practice_create_a_poly.py  practice_triangle_to_curve_repetition.py
.experiments/18_interpolation_and_easing_types/: rocket_cube_noise_keyframe_modifier0001-0500.mkv
.experiments/20_keyframing_with_python/: animation_module_test.py  keyframing_with_python.py
.experiments/22_geometry_nodes/: gumdrop.blend
.experiments/23_hard_surface_modeling/: chair.blend
.experiments/24_open_shader_language/: open_shader_language.blend
.experiments/25_compress_module/: compress_mkv.sh
.github/: dependabot.yml
.github/workflows/: blender_tests.yaml  blender_tests.yml
01-10/04_vscode_python/: starter_script.py
01-10/05_basic_material/: create_basic_material.blend
01-10/06_cube_from_vertices/: cube_from_vertices.py
01-10/07_material_detail_with_noise/: 0001-0360.mkv  material_detail_with_noise.py
01-10/08_stack_spin_animation/: stack_spin_animation.py.bak
01-10/10_user_interface/: user_interface.blend
01_python_scripting_crash_course/: scripting_crash_course.py
04_vscode_python/: my_script_2.py
05_basic_material/: material.py
06_cube_from_vertices/: recording-2025-05-04_17.28.21.mkv
07_material_detail_with_noise/: material_detail_with_noise.blend
08_stack_spin_animation/: stack_spin_animation.blend  stack_spin_animation.py
09_make_meshes/: make_meshes.blend  make_meshes.py
10_user_interface/: user_interface.blend  user_interface.py
11-20/11_headless_mode_and_modules/: headless_mode_and_modules.py
11-20/12_random_mat_ico_sphere/: main.py
11-20/14_procedural_material/: procedural_material.blend  procedural_material.py
11-20/15_meshes_from_scratch/: create_bmesh.py
11-20/16_bmesh_context_manager/: bmesh_context_manager.py
11-20/18_interpolation_and_easing_types/: rocket_cube.blend
11-20/19_render_performance_optimization/: render_optimization copy.blend  render_optimization.py
11-20/20_keyframing_with_python/: animation_module_test.blend  keyframing_with_python.py
12_random_mat_ico_sphere/: main.blend  main.py
13_node_based_material_exploration/: Iterative Material Exploration - BSDF.blend  node_based_material_exploration.blend
15_circle_mesh_from_scratch/: main.blend  main.py  practice_triangle_to_curve_repetition.blend  practice_triangle_to_curve_repetition.py
15_meshes_from_scratch/: bmesh_and_modifiers.py  bmesh_from_primitive.py  latex.py  main.py  practice_normal_distribution.py
16_bmesh_context_manager/: bmesh_context_manager.py
17_auto_keying_with_walk_mode/: auto_keying_with_walk_mode.blend
18_interpolation_and_easing_types/: interpolation_and_easing_types0001-0250.mkv  rocket_cube_noise_keyframe_modifier.blend
19_render_performance_optimization/: render_optimization.py
20_keyframing_with_python/: animation_module_test.py  scratchpad_explore_animation_data.py
21_rolling_cube_animation/: rolling_cube_animation.py
22_geometry_nodes/: gumdrop.blend  pots_and_vases.blend
25_compress_module/: compress_module.py
25_post_process_module/: compress_mkv.sh  post_process_module.py
blender_utils/: __init__.py  blend_file.py  helpers.py  install_requirements.py  install_symlink.py  install_symlinks.py  mesh.py  render.py  scene.py  starter_script.py  ui.py
butils/: __init__.py  __main__.py  blend_file.py  mesh.py  scene.py  ui.py
compress_utils/: __init__.py  image.py  video.py
scripts/: hello.py  inspect_blender_py_env.py  install.sh  install_act.sh  install_blender_deps.py  install_butils.sh  install_githooks.sh  shfmt_and_shellcheck.sh  snackbar.sh
tests/: run_tests.py  test_blend_file.py  test_blend_file.py.bak  test_mesh.py  test_mesh.py.bak  test_scene.py  test_ui.py.bak
(+183 files in other folders)
