# basic project config
[project]
name = "butils"
version = "0.1.0"
description = "A collection of Blender scripts and utilities"
readme = "README.md"
authors = [{name = "Jordan Blakey", email = "jordan.t.blakey@gmail.com"}]
requires-python = ">=3.12"
classifiers = [ "Topic :: Software Development :: Libraries :: Python Modules" ]
dynamic = ["dependencies"]

# dependencies
[tool.poetry.dependencies]
blender-stubs = "^3.12.27"
fake-bpy-module-latest = "^20250522"
coverage = "^7.8.2"
ffmpeg-python = "^0.2.0"
future = "^1.0.0"
pastel = "^0.2.1"
piexif = "^1.1.3"
pillow = "^11.2.1"
pyyaml = "^6.0.2"
colorama = "^0.4.6"

[tool.poetry.group.dev.dependencies]
ruff = "^0.11.12"
poethepoet = "^0.34.0"
pymarkdownlnt = "^0.9.16"
mdformat = "^0.7.17"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


# poe tasks
[tool.poe.tasks.default]
help = "Show available poe tasks"
cmd = "poe -h"

[tool.poe.tasks.install]
help = "Check venv, install py & external deps, install & test githooks."
cmd = "scripts/install.sh"

[tool.poe.tasks.test]
help = "Run unit tests using act. `poe test --input 'testcase=test.Case.function'"
cwd = "$POE_PWD"
cmd = """
  act workflow_dispatch
    --input 'verbosity=2'
    --input='print=true'
    --input='coverage=false'
"""

[tool.poe.tasks.blend]
help = "`blender -P script.py`."
cwd = "$POE_PWD"
cmd = "blender --python"

[tool.poe.tasks.bblend]
help = "`blender -b -P script.py`."
cwd = "$POE_PWD"
cmd = "blender --background --python"

[tool.poe.tasks.eblend]
help = "`blender -b --python-expr`."
cwd = "$POE_PWD"
cmd = "blender --background --python-expr"

[tool.poe.tasks.create]
help = "`python -m butils create`. See `poe create --help`."
cwd = "$POE_PWD"
cmd = "python -m butils create"

[tool.poe.tasks.compress]
help = "`python -m butils compress`. See `poe compress --help`."
cwd = "$POE_PWD"
cmd = "python -m butils compress"

# coverage configuration
[tool.coverage.run]
source = ["butils"]
omit = [
    "butils/btyping/*",
    "tests/*",
    "*/site-packages/*",
    "*/scripts/modules/bpy/*",
]

[tool.coverage.report]
show_missing = true
skip_covered = false

[tool.ruff]
line-length = 80
exclude = [
    "static/**",
]
